# SimpleUpdater

./: CHECKLIST.md  CMakeLists.txt  MIGRATION.md  desktopshortcut.h  desktopshortcut_linux.h  desktopshortcut_win.h  filecopier.cpp  filecopier.h  filehandler.cpp  filehandler.h  main.cpp  mainwindow.cpp  mainwindow.h  version.h.in  version.rc.in
src/: cliparser.cpp  cliparser.h  downloadhandler.cpp  downloadhandler.h  filehandler.cpp  filehandler.h  main.cpp  mainwindow.cpp  mainwindow.h  manifest.cpp  manifest.h  updatecontroller.cpp  updatecontroller.h
src/platform/: linux.cpp  platform.h  win32.cpp
tests/: CMakeLists.txt  tst_cliparser.cpp  tst_filehandler.cpp  tst_manifest.cpp
